Fixed bug in XMLResource.setContentAsDOM; Added modification and creation time stamps to documents; Fixed wrong dirty flag in page headers; Updated docs; Added XUpdate method to SOAP interfaces
svn path=/trunk/eXist-1.0/; revision=99